added Kevin's 3/11 updates

--- a/source/potato.html
+++ b/source/potato.html
@@ -25,7 +25,7 @@
             <div class="menu hidden" id="instructionsMenu">
                 Instructions
                 <p id="instrTopic"> [filler]</p>
-                <p id="instrContent"> [filler content Potato Timer is a Pomodoro timer meant to improve your
+                <p class= "leftAlign" id="instrContent"> [filler content Potato Timer is a Pomodoro timer meant to improve your
                     productivity by
                     breaking up your focus for a set "work" time and a following "break" time.
                     After every four "work" phases, a longer break period happens. To switch to another language
