fixed small issue on disablebtn + modify instr css

--- a/source/potato.html
+++ b/source/potato.html
@@ -33,7 +33,7 @@
                     Chinese, Spanish, Korean), click on the globe icon.]</p>
                 <div class="instrNav">
                     <button class="mainButton" id="back" onclick="back()">Back</button>
-                    <span id="page">1 / 5</span>
+                    <span id="page" style="font-size: 1.4rem;">1 / 5</span>
                     <button class="mainButton" id="next" onclick="next()">Next</button>
                 </div>
             </div>
@@ -101,7 +101,7 @@
         </div>
 
         <div id="phaseWrapper">
-            <p class="cycle" style="
+            <p class="cycle" id="cycle" style="
                 display: block;
                 font-size:  16px;
                 font-weight: bold;
