Updated language changes, adjusted themed icon colors

--- a/source/potato.html
+++ b/source/potato.html
@@ -23,7 +23,7 @@
 
             <!-- Instructions Menu -->
             <div class="menu hidden" id="instructionsMenu">
-                Instructions
+                <p id="instrTitle">Instructions</p>
                 <p id="instrTopic"></p>
                 <p class= "leftAlign" id="instrContent"></p>
                 <div class="instrNav">
@@ -96,7 +96,7 @@
         </div>
 
         <div id="phaseWrapper">
-            <p id="cycleNum">1 of 4</p>
+            <!-- <p id="cycleNum">1 / 4</p> -->
             <p id="phaseDisplay">Idle</p>
         </div>
 
