Fixed minor bugs

--- a/source/potato.html
+++ b/source/potato.html
@@ -79,10 +79,14 @@
                     <input type="number" class="customTime" id="longSec" value="00" min="0" max="59" maxlength="2"
                         autocomplete="off" onblur="checkValue('longSec')">
                 </div>
-                <!-- <div>
-                        <label for="cycleLength" class="fieldLabel" id="cycleLength">Length of Cycle</label>
-                        <input type="number" class="customTime" id="cycleLength" value="4">
-                    </div> -->
+
+                <!--
+                <div>
+                    <label for="cycleLength" class="fieldLabel" id="cycleLength">Length of Cycle</label>
+                    <input type="number" class="customTime" id="cycleLength" value="4">
+                    </div>
+                -->
+
                 <div>
                     <label for="volume" class="fieldLabel" id="volumeTitle">Volume (%)</label>
                     <input type="number" class="customVolume" id="volume" value="25" min="0" max="100"
