Fixed displays of language, corrected KOR forms

--- a/source/potato.html
+++ b/source/potato.html
@@ -187,6 +187,12 @@
             alt="Sad Potato is Sad" id="sadPotato">
         <div id="jsDisabled">Oh no! <br>
             We're sorry, but this website application uses JavaScript to operate the timer.<br>
-            Please enable JavaScript for the best user experience!</div>
+            Please enable JavaScript for the best user experience!<br><br>
+            抱歉，改网站使用JavaScript来运行计时器。<br>
+            请启动JavaScript以享受最佳使用感受！<br><br>
+            Lo siento, pero esta aplicación de sitio web utiliza JavaScript para operar el temporizador.<br>
+            ¡Habilite JavaScript para obtener la mejor experiencia de usuario!'<br><br>
+            죄송합니다.이 웹 사이트 응용 프로그램은 JavaScript를 사용하여 타이머를 작동합니다.<br>
+            최상의 사용자 경험을 위해 JavaScript를 활성화하십시오!</div>
     </noscript>
 </body>
