Changing ref to instr.

--- a/source/potato.html
+++ b/source/potato.html
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/png" href="img/potatoIcon.png">
 
     <script src="../instrumented/app.js"></script>
-    <script src="drag.js"></script>
-    <script src="lang.js"></script>
+    <script src="../instrumented/drag.js"></script>
+    <script src="../instrumented/lang.js"></script>
 </head>
 
 <body id="background">
