Remove Instrumented Code

--- a/source/potato.html
+++ b/source/potato.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="congrats.css">
     <link rel="icon" type="image/png" href="img/potatoIcon.png">
 
-    <script src="../instrumented/app.js"></script>
-    <script src="../instrumented/drag.js"></script>
+    <script src="app.js"></script>
+    <script src="drag.js"></script>
     <script src="lang.js"></script>
 </head>
 
