hide the title after users start the timer

--- a/source/potato.html
+++ b/source/potato.html
@@ -16,7 +16,7 @@
 
 <body id="background">
     <div class="contentWrapper" id="contentWrapper">
-        <p id="title">Potato Timer</p>
+        <p class="opacityShow" id="title">Potato Timer</p>
 
         <div id="options">
             <button class="transparent opacityShow" id="help" onclick="show('instructionsMenu'); next()"
